fixed tag display on mobile

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -67,6 +67,16 @@ code {
 
 .tags-container {
   text-align: center;
+  a {
+    display: block;
+    margin: 10px;
+  }
+  @media only screen and (min-width: 768px) {
+    a {
+      display: inline;
+      margin: 0;
+    }
+  }
   a:hover {
     text-decoration: none;
   }
